--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
   <meta property="twitter:images" content="./img/ipad-seo.png">
   <meta property="twitter:url" content="https://www.apple.com/kr/ipad-10.2/">
 
-  
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
+  <link rel="stylesheet" href="./css/common.css">
+  <link rel="stylesheet" href="./css/main.css">
 
+  <script defer src="./js/common.js"></script>
+  <script defer src="./js/main.js"></script>
 </head>
 <body>
   
