--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>IPAD</title>
 
   <meta property="og:type" content="summary">
   <meta property="og:site_name" content="Apple (KR)">
@@ -19,8 +19,15 @@
   <meta property="twitter:description" content="강력한 A13 Bionic 칩을 탑재한 iPad. 센터 스테이지 기술이 적용된 12MP 울트라 와이드 전면 카메라, True Tone 디스플레이 기술 및 64GB 저장 용량까지 갖췄습니다.">
   <meta property="twitter:images" content="./img/ipad-seo.png">
   <meta property="twitter:url" content="https://www.apple.com/kr/ipad-10.2/">
-
+  
+  <!-- reset css cdn -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
+
+  <!-- google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="./css/common.css">
   <link rel="stylesheet" href="./css/main.css">
 
@@ -28,6 +35,64 @@
   <script defer src="./js/main.js"></script>
 </head>
 <body>
+  <header>
+    <div class="inner">
+
+      <ul class="menu">
+        <li class="apple-logo"><a href="javascript:void(0)">Apple</a></li>
+        <li><a href="javascript:void(0)">스토어</a></li>
+        <li><a href="javascript:void(0)">Mac</a></li>
+        <li><a href="javascript:void(0)">ipad</a></li>
+        <li><a href="javascript:void(0)">iphone</a></li>
+        <li><a href="javascript:void(0)">Watch</a></li>
+        <li><a href="javascript:void(0)">AirPods</a></li>
+        <li><a href="javascript:void(0)">Apple 독점 제공</a></li>
+        <li><a href="javascript:void(0)">액세서리</a></li>
+        <li><a href="javascript:void(0)">고객지원</a></li>
+        <li class="search-starter">
+          <a href="javascript:void(0)">검색</a>
+        </li>
+        <li class="basket-stater">
+          <a class="basket--controller" href="javascript:void(0)">장바구니</a>
+          <div class="basket">
+            <div class="arrow"></div>
+            <div class="message">
+              장바구니가 비어 있습니다.
+            </div>
+            <ul>
+              <li><a href="javascript:void(0)">장바구니</a></li>
+              <li><a href="javascript:void(0)">저장된 항목</a></li>
+              <li><a href="javascript:void(0)">주문</a></li>
+              <li><a href="javascript:void(0)">계정</a></li>
+              <li><a href="javascript:void(0)">로그인</a></li>
+            </ul>
+          </div>
+        </li>
+      </ul>
+
+      <div class="search-wrap">
+        <div class="search">
+          <div class="shadow"></div>
+          <div class="text-field">
+            <input type="text" placeholder="apple.com 검색">
+            <div class="search-icon"></div>
+            <div class="search-closer"></div>
+          </div>
+          <div class="autocompletes">
+            <h3>빠른 링크</h3>
+            <ul>
+              <li><a href="javascript:void(0)">Apple Store 임시 휴무 관련 자주하는 질문</a></li>
+              <li><a href="javascript:void(0)">Apple Store Online에서 쇼핑하기</a></li>
+              <li><a href="javascript:void(0)">액세서리</a></li>
+              <li><a href="javascript:void(0)">AirPods</a></li>
+              <li><a href="javascript:void(0)">AirTag</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </header>
   
 </body>
 </html>
