--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <script defer src="./js/main.js"></script>
 </head>
 <body>
+  <!-- header -->
   <header>
     <div class="inner">
 
@@ -93,6 +94,102 @@
 
     </div>
   </header>
+
+  <!-- navigation -->
+  <nav>
+    <div class="inner">
+
+      <h1>iPad</h1>
+      <ul class="menu">
+        <li class="active"><a href="javascript:void(0)">개요</a></li>
+        <li><a href="javascript:void(0)">iPad를 선택하는 이유</a></li>
+        <li><a href="javascript:void(0)">제품 사양</a></li>
+      </ul>
+      <button class="btn">구입하기</button>
+      
+    </div>
+  </nav>
+
+  <!-- hero -->
+  <section class="hero">
+
+    <div class="inner">
+
+      <h1 class="bgtext">iPad</h1>
+      <div class="figures">
+        <figure>
+          <img src="./img/hero_ipad.jpg" alt="iPad와 Smart Keyboard 및 Apple pencil">
+          <figcaption class="bgtext">
+            <div class="caption-camera">센터 스테이지 기술이 적용된 새로운 울트라 와이드 전면 카메라</div>
+            <div class="caption-chip">A13 BIONIC 칩 전격 탑재</div>
+            <div class="caption-storage">저장 용량은 64GB부터</div>
+          </figcaption>
+        </figure>
+      </div>
+      <h2 class="bgtext">매사를 더욱 쉽게</h2>
+      <p class="pricing">
+        ₩449,000부터
+      </p>
+      <p class="description">
+        강력한 성능에 간편함과 다재다능까지 갖춘 새로워진 iPad.
+        당신이 어떤 일을 즐겨하든 함께할 수 있도록 디자인 되었습니다.
+        직업, 취미, 공부, 소통 등, 이 모든 것을 부담 없이 누릴 수 있죠.
+      </p>
+      <div class="links">
+        <a href="javascript:void(0)" class="link">이벤트 시청하기</a>
+        <a href="javascript:void(0)" class="link">iPad를 선택하는 이유</a>
+      </div>
+      
+    </div>
+
+  </section>
+
+  <!-- power -->
+  <section class="power">
+
+    <div class="inner">
+
+      <div class="multiple-apps">
+        <h1 class="bgtext">거침없는 일 처리 성능</h1>
+        <div class="figures">
+          <figure>
+            <img src="./img/power_multiple_apps.png" alt="Keynote 머크업과 메시지가 함께 표시된 Split View">
+            <figcaption class="bgtext">동시에 여러 앱 사용 가능</figcaption>
+          </figure>
+        </div>
+      </div>
+
+      <div class="arcade feature">
+        <div class="figures">
+          <figure>
+            <img src="./img/power_arcade.png" alt="iPad Wonderbox 앱이 열려 있는 모습">
+            <figcaption class="bgtext">신나게 즐기는 새로운 APPLE ARCADE 게임</figcaption>
+          </figure>
+        </div>
+        <div class="infos">
+          <div class="info">
+            <div class="icon"></div>
+            <p>A13 Bionic 칩이 메시지 전송, 인터넷 서핑, 여러 앱 동시에 사용하기 등 모든 작업에 더욱 탁월한 반응성을 더해줍니다.</p>
+          </div>
+          <div class="info">
+            <div class="icon"></div>
+            <p>최대 20% 빨라진 GPU로 뛰어난 그래픽 성능을 선사합니다. 몰입감 넘치는 게임 등 더 많은 것을 즐기는 데 안성맞춤이죠.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="create feature">
+        <div class="figures">
+          <figure>
+            <img src="./img/power_create.jpg" alt="Procreate에서 Apple Pencil로 그림이 그려져 있는 모습">
+            <figcaption class="bgtext">스케치하고, 그리고, 색칠하고</figcaption>
+          </figure>
+        </div>
+      </div>
+
+    </div>
+
+  </section>
   
 </body>
 </html>
