아이폰 반응형 완성

--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
     <div class="inner">
 
       <ul class="menu">
+        <li class="menu-starter">
+          <a>
+            <div>
+              <span></span>
+              <span></span>
+            </div>
+          </a>
+        </li>
         <li class="apple-logo"><a href="javascript:void(0)">Apple</a></li>
         <li><a href="javascript:void(0)">스토어</a></li>
         <li><a href="javascript:void(0)">Mac</a></li>
@@ -79,6 +87,7 @@
             <div class="search-icon"></div>
             <div class="search-closer"></div>
           </div>
+          <div class="search-canceler">취소</div>
           <div class="autocompletes">
             <h3>빠른 링크</h3>
             <ul>
@@ -92,14 +101,31 @@
         </div>
       </div>
 
+      <div class="clone-menu">
+        <ul>
+          <li><a href="javascript:void(0)">스토어</a></li>
+          <li><a href="javascript:void(0)">Mac</a></li>
+          <li><a href="javascript:void(0)">ipad</a></li>
+          <li><a href="javascript:void(0)">iphone</a></li>
+          <li><a href="javascript:void(0)">Watch</a></li>
+          <li><a href="javascript:void(0)">AirPods</a></li>
+          <li><a href="javascript:void(0)">Apple 독점 제공</a></li>
+          <li><a href="javascript:void(0)">액세서리</a></li>
+          <li><a href="javascript:void(0)">고객지원</a></li>
+        </ul>
+      </div>
+
     </div>
   </header>
 
   <!-- navigation -->
   <nav>
+    <div class="shadow"></div>
+    <div class="content-bg"></div>
     <div class="inner">
 
       <h1>iPad</h1>
+      <div class="menu-toggler"></div>
       <ul class="menu">
         <li class="active"><a href="javascript:void(0)">개요</a></li>
         <li><a href="javascript:void(0)">iPad를 선택하는 이유</a></li>
@@ -114,7 +140,6 @@
 
     <!-- hero -->
     <section class="hero">
-  
       <div class="inner">
   
         <h1 class="bgtext">iPad</h1>
@@ -141,9 +166,8 @@
           <a href="javascript:void(0)" class="link">이벤트 시청하기</a>
           <a href="javascript:void(0)" class="link">iPad를 선택하는 이유</a>
         </div>
-        
+      
       </div>
-  
     </section>
   
     <!-- power -->
@@ -615,7 +639,7 @@
     </section>
   
     <!-- trade -->
-    <section class="trade">\
+    <section class="trade">
       <div class="whitebox">
         <div class="inner">
           <h1>
@@ -648,10 +672,10 @@
     <!-- footer -->
     <footer>
       <div class="inner">
-  
+
         <div class="buy-info">
           <div>
-            <img class="icon" src="./img/buy-info-box.svg" alt="무료 익일 배송 Icon" />
+            <img class="icon" src="./images/buy-info-box.svg" alt="무료 익일 배송 Icon" />
             <h3>업무일 기준 무료 익일 배송</h3>
             <p>
               오후 3시 이전에 주문된<br />
@@ -660,7 +684,7 @@
             <a href="javascript:void(0)" class="link">더 알아보기</a>
           </div>
           <div>
-            <img class="icon" src="./img/buy-info-won.svg" alt="금융 혜택 Icon" />
+            <img class="icon" src="./images/buy-info-won.svg" alt="금융 혜택 Icon" />
             <h3>금융 혜택</h3>
             <p>
               무이자 할부를 통해 Apple 제품을<br />
@@ -669,7 +693,7 @@
             <a href="javascript:void(0)" class="link">더 알아보기</a>
           </div>
           <div>
-            <img class="icon" src="./img/buy-info-engrave.svg" alt="각인 Icon" />
+            <img class="icon" src="./images/buy-info-engrave.svg" alt="각인 Icon" />
             <h3>진정 자신만의 것으로</h3>
             <p>
               자신의 이름이나 개성 있는 문구를<br />
@@ -678,7 +702,7 @@
             <a href="javascript:void(0)" class="link">더 알아보기</a>
           </div>
         </div>
-  
+
         <div class="warning">
           <ul>
             <li id="footnote*">
@@ -712,17 +736,17 @@
             <li>AirPods(2세대) 무선 충전 케이스 모델 및 액세서리는 별도로 판매됩니다.</li>
           </ul>
         </div>
-  
+
         <div class="breadcrumbs">
           <a href="javascript:void(0)" class="apple-logo bgtext">Apple</a>
           <a href="javascript:void(0)">iPad</a>
           <a href="javascript:void(0)">iPad 10.2</a>
         </div>
-  
+
         <div class="navigations">
           <!-- Insert via JS -->
         </div>
-  
+
         <div class="how-to-shop">
           다양한 쇼핑 방법:
           <a href="javascript:void(0)">Apple Store</a>를 방문하거나,
@@ -743,7 +767,7 @@
           </ul>
           <div class="locale">대한민국</div>
         </div>
-  
+
       </div>
     </footer>
   </main>
