footer  이미지 경로 고치기

--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
 
         <div class="buy-info">
           <div>
-            <img class="icon" src="./images/buy-info-box.svg" alt="무료 익일 배송 Icon" />
+            <img class="icon" src="./img/buy-info-box.svg" alt="무료 익일 배송 Icon" />
             <h3>업무일 기준 무료 익일 배송</h3>
             <p>
               오후 3시 이전에 주문된<br />
@@ -684,7 +684,7 @@
             <a href="javascript:void(0)" class="link">더 알아보기</a>
           </div>
           <div>
-            <img class="icon" src="./images/buy-info-won.svg" alt="금융 혜택 Icon" />
+            <img class="icon" src="./img/buy-info-won.svg" alt="금융 혜택 Icon" />
             <h3>금융 혜택</h3>
             <p>
               무이자 할부를 통해 Apple 제품을<br />
@@ -693,7 +693,7 @@
             <a href="javascript:void(0)" class="link">더 알아보기</a>
           </div>
           <div>
-            <img class="icon" src="./images/buy-info-engrave.svg" alt="각인 Icon" />
+            <img class="icon" src="./img/buy-info-engrave.svg" alt="각인 Icon" />
             <h3>진정 자신만의 것으로</h3>
             <p>
               자신의 이름이나 개성 있는 문구를<br />
